--- a/manifest.json
+++ b/manifest.json
@@ -2,31 +2,65 @@
   "name": "Scoped - Sustainability Analysis",
   "short_name": "Scoped",
   "description": "Analyze sustainability metrics for any location worldwide. Get instant insights into environmental health, social infrastructure, and economic sustainability.",
-  "start_url": "/",
+  "start_url": "/Scoped/",
+  "scope": "/Scoped/",
   "display": "standalone",
-  "background_color": "#667eea",
+  "background_color": "#ffffff",
   "theme_color": "#4CAF50",
-  "orientation": "portrait-primary",
+  "orientation": "any",
+  "dir": "ltr",
+  "lang": "en-US",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/Scoped/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/Scoped/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/Scoped/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/Scoped/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "categories": ["lifestyle", "utilities", "education"],
   "screenshots": [
     {
-      "src": "/screenshot1.png",
+      "src": "/Scoped/Screenshots/screenshot1.png",
       "sizes": "1080x1920",
-      "type": "image/png"
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/Scoped/Screenshots/screenshot2.png",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/Scoped/Screenshots/screenshot3.png",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/Scoped/Screenshots/screenshot4.png",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "form_factor": "narrow"
     }
   ],
   "shortcuts": [
@@ -34,8 +68,8 @@
       "name": "Analyze Current Location",
       "short_name": "My Location",
       "description": "Analyze sustainability of your current location",
-      "url": "/?action=analyze",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "url": "/Scoped/?action=analyze",
+      "icons": [{ "src": "/Scoped/icon-192.png", "sizes": "192x192" }]
     }
   ]
 }
